samples/_failures_safe/1761632317_ba3de1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8736e53.c: In function ‘main’:
./samples/SAFE/__tmp_d8736e53.c:153:16: error: missing terminating " character
  153 |         printf("No text provided for analysis
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d8736e53.c:153:9: error: expected expression at end of input
  153 |         printf("No text provided for analysis
      |         ^~~~~~
./samples/SAFE/__tmp_d8736e53.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8736e53.c:153:9: error: expected declaration or statement at end of input
